 class Board {

	public int nbOfTile;
	public int length;
	public int widht;
	/**
	* def
	**/
	public  Board(int length,int widht){

		return new ;
	}

	/**
	* def
	* @return :int:
	**/
	public int getNumberOfTile(){

		return 0;
	}


}