abstract class Character {

	protected int gold;
	protected Player Owner;
	protected Tile position;
	/**
	* def
	* @return :void:
	**/
	public void getGold(int);

	/**
	* def
	* @return :Tile:
	**/
	public Tile getPosition(){

		return new Tile;
	}

	/**
	* def
	* @return :Player:
	**/
	public Player getOwner(){

		return new Player;
	}

	/**
	* def
	* @return :void:
	**/
	public void kill();

	/**
	* def
	* @return :int:
	**/
	protected int numberUnitsClaimed(){

		return 0;
	}


}