 class Desert {

	public Resources resourcesHarvest;
	/**
	* def
	**/
	public  Desert(int x,int y){

		return new ;
	}


}