 class FarmGame {

	/**
	* def
	* @return :void:
	**/
	public void FarmGame(Board board);


}