 class Forest {

	public Resources resourcesHarvest;
	/**
	* def
	**/
	public  Forest(int x,int y){

		return new ;
	}


}