 class Hills {

	public Resources resourcesHarvest;
	/**
	* def
	**/
	public  Hills(int x,int y){

		return new ;
	}


}