 class Plaine {

	public Resources resourcesHarvest;
	/**
	* def
	**/
	public  Plaine(int x,int y){

		return new ;
	}


}