 class Tile {

	protected int x;
	protected int y;
	protected Resources loot;
	protected bool isEmpty;
	/**
	* def
	**/
	public  Tile(int x, int y){

		return new ;
	}

	/**
	* def
	* @return :int:
	**/
	public int getX(){

		return 0;
	}

	/**
	* def
	* @return :int:
	**/
	public int getY(){

		return 0;
	}

	/**
	* def
	* @return ::
	**/
	public  getResourcesOnHarvest() Resources{

		return new ;
	}

	/**
	* def
	* @return :int:
	**/
	public int getUnitsOnTile(){

		return 0;
	}


}