 class WarGame {

	/**
	* def
	* @return :void:
	**/
	public void WarGame(Board board);


}