package game.game;


 class Worker implement Character {


	/**
	* auto gen docs
	**/
 	public    Worker(Tile position) ;

	/**
	* auto gen docs
	* @return :void:
	**/
 	public  void  bePayed(int) ;

	/**
	* auto gen docs
	* @return :int:
	**/
 	public  int  numberUnitsClaimed() {

		return 0;
	}


}