package game.board;


 class Sea implement Tile  {

	public    Resources resourcesHarvest;


	/**
	* auto gen docs
	**/
 	public    Sea(int x,int y) ;


}