package assoc;


 class Army implement Character {

	public    int size;


	/**
	* auto gen docs
	**/
 	public    Army(int size, Tile position) ;

	/**
	* auto gen docs
	* @return :int:
	**/
 	public  int  getSize() {

		return 0;
	}

	/**
	* auto gen docs
	* @return :void:
	**/
 	public  void  fight(Army other) ;

	/**
	* auto gen docs
	* @return :void:
	**/
 	public  void  extendArmy() ;

	/**
	* auto gen docs
	* @return :int:
	**/
 	public  int  numberUnitsClaimed() {

		return 0;
	}


}